--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Byte-compiled / optimized / DLL files
+*.csv
 __pycache__/
 *.py[cod]
 *$py.class
@@ -136,3 +137,4 @@ dmypy.json
 
 # Coala
 *.orig
+/data
