--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ packages = [
     { include = "historic_weather_forecast" },
 ]
 classifiers = [
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
@@ -21,10 +20,11 @@ classifiers = [
 
 [tool.poetry.dependencies]
 dparse = ">=0.5.2"
-python = "^3.7.0"
+python = "^3.8.0"
 click = ">=8.0.0"
 rich = ">=10.3.0"
 PyYAML = ">=5.4.1"
+pandas = "^1.5.2"
 
 [tool.poetry.dev-dependencies]
 pytest = ">=6.2.3"
