--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,64 +1,56 @@
+# Apply to all files without commiting: pre-commit run --all-files
+# Update this file: pre-commit autoupdate
+exclude:
+  ^.*luigi.*$|
+  \.git|
+  \.__pycache__|
+  \.hg|
+  \.mypy_cache|
+  \.tox|
+  \.venv|
+  _build|
+  buck-out|
+  build|
+  dist
 repos:
-    - repo: local
-      hooks:
-          - id: black
-            name: black
-            entry: black
-            language: system
-            types: [python]
-            require_serial: true
-          - id: check-added-large-files
-            name: Check for added large files
-            entry: check-added-large-files
-            language: system
-          - id: check-toml
-            name: Check Toml
-            entry: check-toml
-            language: system
-            types: [toml]
-          - id: check-yaml
-            name: Check Yaml
-            entry: check-yaml
-            language: system
-            types: [yaml]
-          - id: end-of-file-fixer
-            name: Fix End of Files
-            entry: end-of-file-fixer
-            language: system
-            types: [text]
-            stages: [commit, push, manual]
-            exclude: docs/
-          - id: flake8
-            name: flake8
-            entry: flake8
-            language: system
-            types: [python]
-            require_serial: true
-          - id: pyupgrade
-            name: pyupgrade
-            description: Automatically upgrade syntax for newer versions.
-            entry: pyupgrade
-            language: system
-            types: [python]
-            args: [--py38-plus]
-          - id: trailing-whitespace
-            name: Trim Trailing Whitespace
-            entry: trailing-whitespace-fixer
-            language: system
-            types: [text]
-            stages: [commit, push, manual]
-    - repo: https://github.com/pre-commit/mirrors-prettier
-      rev: v2.5.1
-      hooks:
-          - id: prettier
-    - repo: https://github.com/pycqa/isort
-      rev: 5.8.0
-      hooks:
-          - id: isort
-            name: isort (python)
-          - id: isort
-            name: isort (cython)
-            types: [cython]
-          - id: isort
-            name: isort (pyi)
-            types: [pyi]
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v3.4.0
+    hooks:
+    -   id: check-ast
+    -   id: check-byte-order-marker
+    -   id: check-case-conflict
+    -   id: check-docstring-first
+    -   id: check-json
+    -   id: check-yaml
+    -   id: debug-statements
+    -   id: detect-private-key
+    -   id: end-of-file-fixer
+    -   id: trailing-whitespace
+    -   id: mixed-line-ending
+    -   id: double-quote-string-fixer
+-   repo: https://github.com/pycqa/isort
+    rev: 5.6.3
+    hooks:
+    -   id: isort
+        args:
+          - --filter-files
+          - --profile=black
+-   repo: https://github.com/ambv/black
+    rev: 22.3.0
+    hooks:
+    - id: black
+      language_version: python3
+      args:
+        - --skip-string-normalization
+        - --line-length=120
+        - --include='\.pyi?$'
+-   repo: https://gitlab.com/pycqa/flake8
+    rev: 3.7.9
+    hooks:
+    - id: flake8
+      exclude: ^.*gix.*$
+      args:
+        - --max-line-length=120
+        - --max-complexity=21
+        - --select=B,C,E,F,W,T4,B9
+        - --ignore=E203,E266,E501,W503,F405,F403,F401,E402
