--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,7 +44,7 @@ repos:
         - --skip-string-normalization
         - --line-length=120
         - --include='\.pyi?$'
--   repo: https://gitlab.com/pycqa/flake8
+-   repo: https://github.com/PyCQA/flake8
     rev: 3.7.9
     hooks:
     - id: flake8
